# mvp_gui_2

./: .gitignore  .gitmodules  README.md  package.xml  run.py  setup.cfg  setup.py
config/: config.yaml  mvp_gui_params.yaml
docs/: mvp_gui_2_documentation_old.md  mvp_gui_2_overview.md  mvp_gui_2_ros2_conversion.md
launch/: mvp_gui_2.launch.py
mvp_gui/: __init__.py  app_factory.py  events.py  forms.py  launch_ros_interface.sh  models.py  ros_interface.py  ros_interface_manager.py  web_utils.py
mvp_gui/nodes/: flask_node.py  ros_interface_node.py
mvp_gui/routes/: routes_base.py  routes_map.py  routes_mission.py  routes_power_manager.py  routes_systems.py
mvp_gui/templates/: base.html  map.html  mission.html  power_manager.html  systems.html  vehicle_status.html
mvp_gui/templates/map_page/: map_table.html  states_table.html
mvp_gui/templates/mission_page/: waypoints_table.html
mvp_gui/templates/power_manager_page/: power_manager_table.html
mvp_gui/templates/secondary_pages/: add_waypoints.html  edit_waypoint.html
mvp_gui/templates/systems_page/: systems_table.html
mvp_gui/templates/vehicle_status_page/: vehicle_status_table.html
